tests/snapshots/snapshots__area.snap
---
source: tests/snapshots.rs
assertion_line: 189
expression: normalize_svg(chart.svg())
---
<svg id="cc_000000" xmlns="http://www.w3.org/2000/svg" width="800" height="500" viewBox="0 0 800 500">
<rect x="0.00" y="0.00" width="800.00" height="500.00" fill="#FFFFFF"/>
<defs><clipPath id="cc_000000_clip"><rect x="70.00" y="50.00" width="700.00" height="390.00"/></clipPath></defs>
<line x1="70.00" y1="50.00" x2="70.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="245.00" y1="50.00" x2="245.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="420.00" y1="50.00" x2="420.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="595.00" y1="50.00" x2="595.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="770.00" y1="50.00" x2="770.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="440.00" x2="770.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="384.29" x2="770.00" y2="384.29" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="328.57" x2="770.00" y2="328.57" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="272.86" x2="770.00" y2="272.86" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="217.14" x2="770.00" y2="217.14" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="161.43" x2="770.00" y2="161.43" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="105.71" x2="770.00" y2="105.71" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="50.00" x2="770.00" y2="50.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="440.00" x2="770.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<line x1="70.00" y1="440.00" x2="70.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="70.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">1</text>
<line x1="245.00" y1="440.00" x2="245.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="245.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">2</text>
<line x1="420.00" y1="440.00" x2="420.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="420.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">3</text>
<line x1="595.00" y1="440.00" x2="595.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="595.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">4</text>
<line x1="770.00" y1="440.00" x2="770.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="770.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">5</text>
<line x1="70.00" y1="50.00" x2="70.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<line x1="65.00" y1="440.00" x2="70.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="444.20" text-anchor="end" font-size="12" fill="#333333">0</text>
<line x1="65.00" y1="384.29" x2="70.00" y2="384.29" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="388.49" text-anchor="end" font-size="12" fill="#333333">1</text>
<line x1="65.00" y1="328.57" x2="70.00" y2="328.57" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="332.77" text-anchor="end" font-size="12" fill="#333333">2</text>
<line x1="65.00" y1="272.86" x2="70.00" y2="272.86" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="277.06" text-anchor="end" font-size="12" fill="#333333">3</text>
<line x1="65.00" y1="217.14" x2="70.00" y2="217.14" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="221.34" text-anchor="end" font-size="12" fill="#333333">4</text>
<line x1="65.00" y1="161.43" x2="70.00" y2="161.43" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="165.63" text-anchor="end" font-size="12" fill="#333333">5</text>
<line x1="65.00" y1="105.71" x2="70.00" y2="105.71" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="109.91" text-anchor="end" font-size="12" fill="#333333">6</text>
<line x1="65.00" y1="50.00" x2="70.00" y2="50.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="54.20" text-anchor="end" font-size="12" fill="#333333">7</text>
<g clip-path="url(#cc_000000_clip)">
<path d="M 70.00,272.86 L 245.00,161.43 L 420.00,217.14 L 595.00,50.00 L 770.00,105.71 L 770.00,440.00 L 70.00,440.00 Z" fill="#4C72B0" stroke="#4C72B0" opacity="0.60"/>
<path d="M 70.00,272.86 L 245.00,161.43 L 420.00,217.14 L 595.00,50.00 L 770.00,105.71" fill="none" stroke="#4C72B0" stroke-width="1.50"/>
</g>
<text x="400.00" y="30.00" text-anchor="middle" font-size="16" fill="#333333">Area Chart</text>
<text x="420.00" y="494.00" text-anchor="middle" font-size="12" fill="#333333">t</text>
<text x="24.50" y="245.00" text-anchor="middle" font-size="12" fill="#333333" transform="rotate(-90.00,24.50,245.00)" >v</text>

</svg>
