tests/snapshots/snapshots__bar.snap
---
source: tests/snapshots.rs
assertion_line: 136
expression: normalize_svg(chart.svg())
---
<svg id="cc_000000" xmlns="http://www.w3.org/2000/svg" width="800" height="500" viewBox="0 0 800 500">
<rect x="0.00" y="0.00" width="800.00" height="500.00" fill="#FFFFFF"/>
<defs><clipPath id="cc_000000_clip"><rect x="70.00" y="50.00" width="700.00" height="390.00"/></clipPath></defs>
<line x1="157.50" y1="50.00" x2="157.50" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="332.50" y1="50.00" x2="332.50" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="507.50" y1="50.00" x2="507.50" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="682.50" y1="50.00" x2="682.50" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="440.00" x2="770.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="384.29" x2="770.00" y2="384.29" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="328.57" x2="770.00" y2="328.57" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="272.86" x2="770.00" y2="272.86" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="217.14" x2="770.00" y2="217.14" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="161.43" x2="770.00" y2="161.43" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="105.71" x2="770.00" y2="105.71" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="50.00" x2="770.00" y2="50.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="440.00" x2="770.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<line x1="157.50" y1="440.00" x2="157.50" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="157.50" y="461.00" text-anchor="middle" font-size="12" fill="#333333">Alpha</text>
<line x1="332.50" y1="440.00" x2="332.50" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="332.50" y="461.00" text-anchor="middle" font-size="12" fill="#333333">Beta</text>
<line x1="507.50" y1="440.00" x2="507.50" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="507.50" y="461.00" text-anchor="middle" font-size="12" fill="#333333">Gamma</text>
<line x1="682.50" y1="440.00" x2="682.50" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="682.50" y="461.00" text-anchor="middle" font-size="12" fill="#333333">Delta</text>
<line x1="70.00" y1="50.00" x2="70.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<line x1="65.00" y1="440.00" x2="70.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="444.20" text-anchor="end" font-size="12" fill="#333333">0</text>
<line x1="65.00" y1="384.29" x2="70.00" y2="384.29" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="388.49" text-anchor="end" font-size="12" fill="#333333">10</text>
<line x1="65.00" y1="328.57" x2="70.00" y2="328.57" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="332.77" text-anchor="end" font-size="12" fill="#333333">20</text>
<line x1="65.00" y1="272.86" x2="70.00" y2="272.86" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="277.06" text-anchor="end" font-size="12" fill="#333333">30</text>
<line x1="65.00" y1="217.14" x2="70.00" y2="217.14" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="221.34" text-anchor="end" font-size="12" fill="#333333">40</text>
<line x1="65.00" y1="161.43" x2="70.00" y2="161.43" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="165.63" text-anchor="end" font-size="12" fill="#333333">50</text>
<line x1="65.00" y1="105.71" x2="70.00" y2="105.71" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="109.91" text-anchor="end" font-size="12" fill="#333333">60</text>
<line x1="65.00" y1="50.00" x2="70.00" y2="50.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="54.20" text-anchor="end" font-size="12" fill="#333333">70</text>
<g clip-path="url(#cc_000000_clip)">
<rect x="96.25" y="206.00" width="122.50" height="234.00" fill="#4C72B0"/>
<rect x="271.25" y="284.00" width="122.50" height="156.00" fill="#4C72B0"/>
<rect x="446.25" y="100.14" width="122.50" height="339.86" fill="#4C72B0"/>
<rect x="621.25" y="245.00" width="122.50" height="195.00" fill="#4C72B0"/>
</g>
<text x="400.00" y="30.00" text-anchor="middle" font-size="16" fill="#333333">Bar Chart</text>
<text x="420.00" y="494.00" text-anchor="middle" font-size="12" fill="#333333">category</text>
<text x="24.50" y="245.00" text-anchor="middle" font-size="12" fill="#333333" transform="rotate(-90.00,24.50,245.00)" >count</text>

</svg>
