tests/snapshots/snapshots__heatmap.snap
---
source: tests/snapshots.rs
assertion_line: 163
expression: normalize_svg(chart.svg())
---
<svg id="cc_000000" xmlns="http://www.w3.org/2000/svg" width="900" height="500" viewBox="0 0 900 500">
<rect x="0.00" y="0.00" width="900.00" height="500.00" fill="#FFFFFF"/>
<defs><clipPath id="cc_000000_clip"><rect x="70.00" y="50.00" width="720.00" height="390.00"/></clipPath></defs>
<line x1="142.00" y1="50.00" x2="142.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="286.00" y1="50.00" x2="286.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="430.00" y1="50.00" x2="430.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="574.00" y1="50.00" x2="574.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="718.00" y1="50.00" x2="718.00" y2="440.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="89.00" x2="790.00" y2="89.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="167.00" x2="790.00" y2="167.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="245.00" x2="790.00" y2="245.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="323.00" x2="790.00" y2="323.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="401.00" x2="790.00" y2="401.00" stroke="#E0E0E0" stroke-width="1.00"/>
<line x1="70.00" y1="440.00" x2="790.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<line x1="142.00" y1="440.00" x2="142.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="142.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">V</text>
<line x1="286.00" y1="440.00" x2="286.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="286.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">W</text>
<line x1="430.00" y1="440.00" x2="430.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="430.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">X</text>
<line x1="574.00" y1="440.00" x2="574.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="574.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">Y</text>
<line x1="718.00" y1="440.00" x2="718.00" y2="445.00" stroke="#333333" stroke-width="1.00"/>
<text x="718.00" y="461.00" text-anchor="middle" font-size="12" fill="#333333">Z</text>
<line x1="70.00" y1="50.00" x2="70.00" y2="440.00" stroke="#333333" stroke-width="1.00"/>
<line x1="65.00" y1="89.00" x2="70.00" y2="89.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="93.20" text-anchor="end" font-size="12" fill="#333333">A</text>
<line x1="65.00" y1="167.00" x2="70.00" y2="167.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="171.20" text-anchor="end" font-size="12" fill="#333333">B</text>
<line x1="65.00" y1="245.00" x2="70.00" y2="245.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="249.20" text-anchor="end" font-size="12" fill="#333333">C</text>
<line x1="65.00" y1="323.00" x2="70.00" y2="323.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="327.20" text-anchor="end" font-size="12" fill="#333333">D</text>
<line x1="65.00" y1="401.00" x2="70.00" y2="401.00" stroke="#333333" stroke-width="1.00"/>
<text x="61.00" y="405.20" text-anchor="end" font-size="12" fill="#333333">E</text>
<g clip-path="url(#cc_000000_clip)">
<rect x="70.00" y="50.00" width="144.00" height="78.00" fill="#440154"/>
<text x="142.00" y="93.20" text-anchor="middle" font-size="12" fill="#FFFFFF">0</text>
<rect x="214.00" y="50.00" width="144.00" height="78.00" fill="#430F5D"/>
<text x="286.00" y="93.20" text-anchor="middle" font-size="12" fill="#FFFFFF">0.25</text>
<rect x="358.00" y="50.00" width="144.00" height="78.00" fill="#411C66"/>
<text x="430.00" y="93.20" text-anchor="middle" font-size="12" fill="#FFFFFF">0.5</text>
<rect x="502.00" y="50.00" width="144.00" height="78.00" fill="#402A70"/>
<text x="574.00" y="93.20" text-anchor="middle" font-size="12" fill="#FFFFFF">0.75</text>
<rect x="646.00" y="50.00" width="144.00" height="78.00" fill="#3E3779"/>
<text x="718.00" y="93.20" text-anchor="middle" font-size="12" fill="#FFFFFF">1</text>
<rect x="70.00" y="128.00" width="144.00" height="78.00" fill="#3D4582"/>
<text x="142.00" y="171.20" text-anchor="middle" font-size="12" fill="#FFFFFF">1.25</text>
<rect x="214.00" y="128.00" width="144.00" height="78.00" fill="#3B528B"/>
<text x="286.00" y="171.20" text-anchor="middle" font-size="12" fill="#FFFFFF">1.5</text>
<rect x="358.00" y="128.00" width="144.00" height="78.00" fill="#375D8B"/>
<text x="430.00" y="171.20" text-anchor="middle" font-size="12" fill="#FFFFFF">1.75</text>
<rect x="502.00" y="128.00" width="144.00" height="78.00" fill="#32678B"/>
<text x="574.00" y="171.20" text-anchor="middle" font-size="12" fill="#FFFFFF">2</text>
<rect x="646.00" y="128.00" width="144.00" height="78.00" fill="#2E728C"/>
<text x="718.00" y="171.20" text-anchor="middle" font-size="12" fill="#FFFFFF">2.25</text>
<rect x="70.00" y="206.00" width="144.00" height="78.00" fill="#2A7C8C"/>
<text x="142.00" y="249.20" text-anchor="middle" font-size="12" fill="#FFFFFF">2.5</text>
<rect x="214.00" y="206.00" width="144.00" height="78.00" fill="#25878C"/>
<text x="286.00" y="249.20" text-anchor="middle" font-size="12" fill="#000000">2.75</text>
<rect x="358.00" y="206.00" width="144.00" height="78.00" fill="#21918C"/>
<text x="430.00" y="249.20" text-anchor="middle" font-size="12" fill="#000000">3</text>
<rect x="502.00" y="206.00" width="144.00" height="78.00" fill="#2B9A85"/>
<text x="574.00" y="249.20" text-anchor="middle" font-size="12" fill="#000000">3.25</text>
<rect x="646.00" y="206.00" width="144.00" height="78.00" fill="#35A47E"/>
<text x="718.00" y="249.20" text-anchor="middle" font-size="12" fill="#000000">3.5</text>
<rect x="70.00" y="284.00" width="144.00" height="78.00" fill="#40AD77"/>
<text x="142.00" y="327.20" text-anchor="middle" font-size="12" fill="#000000">3.75</text>
<rect x="214.00" y="284.00" width="144.00" height="78.00" fill="#4AB670"/>
<text x="286.00" y="327.20" text-anchor="middle" font-size="12" fill="#000000">4</text>
<rect x="358.00" y="284.00" width="144.00" height="78.00" fill="#54C069"/>
<text x="430.00" y="327.20" text-anchor="middle" font-size="12" fill="#000000">4.25</text>
<rect x="502.00" y="284.00" width="144.00" height="78.00" fill="#5EC962"/>
<text x="574.00" y="327.20" text-anchor="middle" font-size="12" fill="#000000">4.5</text>
<rect x="646.00" y="284.00" width="144.00" height="78.00" fill="#78CE58"/>
<text x="718.00" y="327.20" text-anchor="middle" font-size="12" fill="#000000">4.75</text>
<rect x="70.00" y="362.00" width="144.00" height="78.00" fill="#93D34E"/>
<text x="142.00" y="405.20" text-anchor="middle" font-size="12" fill="#000000">5</text>
<rect x="214.00" y="362.00" width="144.00" height="78.00" fill="#AED844"/>
<text x="286.00" y="405.20" text-anchor="middle" font-size="12" fill="#000000">5.25</text>
<rect x="358.00" y="362.00" width="144.00" height="78.00" fill="#C8DD39"/>
<text x="430.00" y="405.20" text-anchor="middle" font-size="12" fill="#000000">5.5</text>
<rect x="502.00" y="362.00" width="144.00" height="78.00" fill="#E3E22F"/>
<text x="574.00" y="405.20" text-anchor="middle" font-size="12" fill="#000000">5.75</text>
<rect x="646.00" y="362.00" width="144.00" height="78.00" fill="#FDE725"/>
<text x="718.00" y="405.20" text-anchor="middle" font-size="12" fill="#000000">6</text>
</g>
<text x="450.00" y="30.00" text-anchor="middle" font-size="16" fill="#333333">Heatmap Correlation</text>
<text x="430.00" y="494.00" text-anchor="middle" font-size="12" fill="#333333">x_label</text>
<text x="24.50" y="245.00" text-anchor="middle" font-size="12" fill="#333333" transform="rotate(-90.00,24.50,245.00)" >y_label</text>


<rect x="810.00" y="50.00" width="16.00" height="6.59" fill="#FDE725"/>
<rect x="810.00" y="56.09" width="16.00" height="6.59" fill="#F3E529"/>
<rect x="810.00" y="62.19" width="16.00" height="6.59" fill="#E9E32D"/>
<rect x="810.00" y="68.28" width="16.00" height="6.59" fill="#DFE131"/>
<rect x="810.00" y="74.38" width="16.00" height="6.59" fill="#D5DF34"/>
<rect x="810.00" y="80.47" width="16.00" height="6.59" fill="#CBDD38"/>
<rect x="810.00" y="86.56" width="16.00" height="6.59" fill="#C0DC3C"/>
<rect x="810.00" y="92.66" width="16.00" height="6.59" fill="#B6DA40"/>
<rect x="810.00" y="98.75" width="16.00" height="6.59" fill="#ACD844"/>
<rect x="810.00" y="104.84" width="16.00" height="6.59" fill="#A2D648"/>
<rect x="810.00" y="110.94" width="16.00" height="6.59" fill="#98D44C"/>
<rect x="810.00" y="117.03" width="16.00" height="6.59" fill="#8ED250"/>
<rect x="810.00" y="123.12" width="16.00" height="6.59" fill="#84D053"/>
<rect x="810.00" y="129.22" width="16.00" height="6.59" fill="#7ACE57"/>
<rect x="810.00" y="135.31" width="16.00" height="6.59" fill="#70CC5B"/>
<rect x="810.00" y="141.41" width="16.00" height="6.59" fill="#66CA5F"/>
<rect x="810.00" y="147.50" width="16.00" height="6.59" fill="#5DC863"/>
<rect x="810.00" y="153.59" width="16.00" height="6.59" fill="#59C565"/>
<rect x="810.00" y="159.69" width="16.00" height="6.59" fill="#55C168"/>
<rect x="810.00" y="165.78" width="16.00" height="6.59" fill="#51BD6B"/>
<rect x="810.00" y="171.88" width="16.00" height="6.59" fill="#4EBA6D"/>
<rect x="810.00" y="177.97" width="16.00" height="6.59" fill="#4AB670"/>
<rect x="810.00" y="184.06" width="16.00" height="6.59" fill="#46B373"/>
<rect x="810.00" y="190.16" width="16.00" height="6.59" fill="#42AF75"/>
<rect x="810.00" y="196.25" width="16.00" height="6.59" fill="#3EAC78"/>
<rect x="810.00" y="202.34" width="16.00" height="6.59" fill="#3AA87B"/>
<rect x="810.00" y="208.44" width="16.00" height="6.59" fill="#36A57D"/>
<rect x="810.00" y="214.53" width="16.00" height="6.59" fill="#32A180"/>
<rect x="810.00" y="220.62" width="16.00" height="6.59" fill="#2F9D83"/>
<rect x="810.00" y="226.72" width="16.00" height="6.59" fill="#2B9A85"/>
<rect x="810.00" y="232.81" width="16.00" height="6.59" fill="#279688"/>
<rect x="810.00" y="238.91" width="16.00" height="6.59" fill="#23938B"/>
<rect x="810.00" y="245.00" width="16.00" height="6.59" fill="#228F8C"/>
<rect x="810.00" y="251.09" width="16.00" height="6.59" fill="#238B8C"/>
<rect x="810.00" y="257.19" width="16.00" height="6.59" fill="#25878C"/>
<rect x="810.00" y="263.28" width="16.00" height="6.59" fill="#27838C"/>
<rect x="810.00" y="269.38" width="16.00" height="6.59" fill="#287F8C"/>
<rect x="810.00" y="275.47" width="16.00" height="6.59" fill="#2A7B8C"/>
<rect x="810.00" y="281.56" width="16.00" height="6.59" fill="#2C778C"/>
<rect x="810.00" y="287.66" width="16.00" height="6.59" fill="#2D738C"/>
<rect x="810.00" y="293.75" width="16.00" height="6.59" fill="#2F6F8B"/>
<rect x="810.00" y="299.84" width="16.00" height="6.59" fill="#316B8B"/>
<rect x="810.00" y="305.94" width="16.00" height="6.59" fill="#32678B"/>
<rect x="810.00" y="312.03" width="16.00" height="6.59" fill="#34638B"/>
<rect x="810.00" y="318.12" width="16.00" height="6.59" fill="#365F8B"/>
<rect x="810.00" y="324.22" width="16.00" height="6.59" fill="#375B8B"/>
<rect x="810.00" y="330.31" width="16.00" height="6.59" fill="#39578B"/>
<rect x="810.00" y="336.41" width="16.00" height="6.59" fill="#3B538B"/>
<rect x="810.00" y="342.50" width="16.00" height="6.59" fill="#3B4E88"/>
<rect x="810.00" y="348.59" width="16.00" height="6.59" fill="#3C4985"/>
<rect x="810.00" y="354.69" width="16.00" height="6.59" fill="#3D4481"/>
<rect x="810.00" y="360.78" width="16.00" height="6.59" fill="#3D3F7E"/>
<rect x="810.00" y="366.88" width="16.00" height="6.59" fill="#3E3A7A"/>
<rect x="810.00" y="372.97" width="16.00" height="6.59" fill="#3E3477"/>
<rect x="810.00" y="379.06" width="16.00" height="6.59" fill="#3F2F73"/>
<rect x="810.00" y="385.16" width="16.00" height="6.59" fill="#3F2A70"/>
<rect x="810.00" y="391.25" width="16.00" height="6.59" fill="#40256C"/>
<rect x="810.00" y="397.34" width="16.00" height="6.59" fill="#412069"/>
<rect x="810.00" y="403.44" width="16.00" height="6.59" fill="#411B65"/>
<rect x="810.00" y="409.53" width="16.00" height="6.59" fill="#421662"/>
<rect x="810.00" y="415.62" width="16.00" height="6.59" fill="#42105E"/>
<rect x="810.00" y="421.72" width="16.00" height="6.59" fill="#430B5B"/>
<rect x="810.00" y="427.81" width="16.00" height="6.59" fill="#430657"/>
<rect x="810.00" y="433.91" width="16.00" height="6.59" fill="#440154"/>
<rect x="810.00" y="50.00" width="16.00" height="390.00" fill="none" stroke="#333333" stroke-width="1"/>
<line x1="826.00" y1="50.00" x2="829.00" y2="50.00" stroke="#333333" stroke-width="1"/>
<text x="830.00" y="54.20" text-anchor="start" font-size="11" fill="#333333">6</text>
<line x1="826.00" y1="245.00" x2="829.00" y2="245.00" stroke="#333333" stroke-width="1"/>
<text x="830.00" y="249.20" text-anchor="start" font-size="11" fill="#333333">3</text>
<line x1="826.00" y1="440.00" x2="829.00" y2="440.00" stroke="#333333" stroke-width="1"/>
<text x="830.00" y="444.20" text-anchor="start" font-size="11" fill="#333333">0</text>
</svg>
